# info521-homeworks-2026

./: .gitignore  CHANGELOG.md  GRADING.md  LICENSE  README.md  assignments-rollout-map.md  pyproject.toml  requirements.txt  rubric.md
assignments/capstone/: .gitignore  capstone.qmd  hw.py  make_release  requirements.txt  specs.md  test_hw.py
assignments/hw0/: OVERHAUL.md  README.md  create_assignment.sh  hw.py  hw.tex  make_release  test_hw.py
assignments/hw1/: OVERHAUL.md  README.md  hw.py  make_release  requirements.txt  test_hw.py
assignments/hw10/: OVERHAUL.md  README.md  hw.py  hw.tex  make_release  test_hw.py
assignments/hw11/: .gitignore  Makefile  OVERHAUL.md  hw.py  hw.tex  make_release  requirements.txt  test_hw.py
assignments/hw12/: OVERHAUL.md  README.md  hw.typ  make_release
assignments/hw13/: OVERHAUL.md  hw.typ  make_release
assignments/hw14/: .gitignore  Makefile  OVERHAUL.md  hw.py  hw.typ  make_release  requirements.txt  test_hw.py
assignments/hw15/: OVERHAUL.md  hw.py  hw.typ  make_release  test_hw.py
assignments/hw16/: OVERHAUL.md  README.md  hw.py  make_release  (+2 more)
docs/: INFO521_LIBRARY_PROPOSAL.md  OVERHAUL_CONSOLIDATION_MAP.md  OVERHAUL_FRAMEWORK.md  REVIEW.md
intros/: _brand.yml  _quarto.yml  _typst-accents.typ  capstone.qmd  intro.css  unit0.qmd  unit1.qmd  unit2a.qmd  unit2b.qmd  unit3.qmd  unit4.qmd  unit5.qmd
scripts/: make_template_repo.sh
shared/: classroom.yml  common.typ  equations.typ  gitignore  make_release  requirements.txt
tests/: test_data.py  test_paths.py  test_rng.py  test_testing.py  test_viz.py
(+101 files in other folders)
